[package]
name = "oxidized-json-checker"
version = "0.3.2"
description = "A pushdown automaton low memory JSON bytes stream checker"
authors = ["Kerollmops <clement@meilisearch.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/Kerollmops/oxidized-json-checker"
homepage = "https://github.com/Kerollmops/oxidized-json-checker"
readme = "README.md"
default-run = "ojc"

[dependencies]
packed_simd = "0.3.3"

[dev-dependencies]
snap = "1.0.0" # for the lib.rs example
