[package]
name = "oxidized-json-checker"
version = "0.3.2"
description = "A pushdown automaton low memory JSON bytes stream checker"
authors = ["Kerollmops <clement@meilisearch.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/Kerollmops/oxidized-json-checker"
homepage = "https://github.com/Kerollmops/oxidized-json-checker"
readme = "README.md"
default-run = "ojc"

[dependencies]
packed_simd = { version = "0.3.3", optional = true }

[dev-dependencies]
snap = "1.0.0" # for the lib.rs example

[features]
default = []
nightly = ["packed_simd"]
